edition = "2023";

option go_package = "github.com/solidDoWant/backup-tool/pkg/grpc/gen/proto/backup-tool/postgres/v1;postgres_v1";

import "postgres_dump.proto";
import "postgres_restore.proto";

service Postgres {
  rpc DumpAll(DumpAllRequest) returns (DumpAllResponse);
  rpc Restore(RestoreRequest) returns (RestoreResponse);
}
